<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My App</string>

    <!-- Login Screen -->
    <string name="app_logo">App Logo</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_subtitle">Sign in to continue</string>

    <!-- Form Fields -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Buttons -->
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <!-- Divider Text -->
    <string name="or_continue_with">or continue with</string>

    <!-- Sign Up Link -->
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
</resources>